# vtparse

./: .clang-format  .travis.yml  README.md  meson.build  vtparse_gen_c_tables.rb
example/: vtparse_example.c
examples/: vtparse_example.c
tables/: vtparse_check_tables.rb  vtparse_gen_c_tables.rb  vtparse_tables.rb
test/: test_vtparse.c  test_vtparse_performance.c
vtparse/: vtparse.c  vtparse.h  vtparse_table.c  vtparse_table.h
